--- a/edutic2/MLearning.Store/packages.config
+++ b/edutic2/MLearning.Store/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Facebook" version="7.0.6" targetFramework="win81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="win81" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="win81" />
   <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="win81" />
@@ -13,6 +14,7 @@
   <package id="MvvmCross.HotTuna.StarterPack" version="3.5.1" targetFramework="win81" />
   <package id="MvvmCross.PortableSupport" version="3.5.1" targetFramework="win81" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="win81" />
+  <package id="SQLite.WinRT" version="3.8.11.158" targetFramework="win81" />
   <package id="System.Spatial" version="5.6.4" targetFramework="win81" />
   <package id="WindowsAzure.MobileServices" version="1.3.2" targetFramework="win81" />
   <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="win81" />
